--- a/public/producer/index.html
+++ b/public/producer/index.html
@@ -3,25 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/producer/style.css">
+    <script type="text/javascript"src="/js/web3.min.js"></script>
+    <script type="text/javascript"src="/js/truffle-contract.min.js"></script>
+    <script type="text/javascript" src="/producer/script.js"></script>
     <title>Producer - Food Tracer</title>
 </head>
 <body>
     <div class="page-header">
+        <ol class="breadcrumb">
+            <li><a href="/main/index.html">Main Page</a></li>
+            <li class="active">Producers' Page</li>
+        </ol>
         <h1>Food Tracer <small>Producers' Page</small></h1>
     </div>
-    <div id="unlockAccount" class="panel panel-default">
+    <div id="alert-box"></div>
+    <div id="unlock-account" class="panel panel-default">
         <div class="panel-heading">Unlock Account</div>
         <div class="panel-body">
             <label for="address">Your Address</label>
             <div class="input-group">
                 <input type="text" class="form-control" id="address" size="50">
-                <button class="btn btn-primary margin-horizontal" onclick="unlockAccount()">Unlock</button>
             </div>
+            <label for="password">Your Password</label>
+            <div class="input-group">
+                <input type="password" class="form-control" id="password" size="50">
+            </div>
+            <button class="btn btn-primary margin-vertical" onclick="unlockAccount()">Unlock</button>
         </div>
     </div>
-    <div id="registerProducer" class="panel panel-default">
+    <div id="register-producer" class="panel panel-default">
         <div class="panel-heading">Register Producer</div>
         <div class="panel-body">
             <label for="producer-name">Name</label>
@@ -35,7 +47,7 @@
             <button class="btn btn-primary margin-vertical" onclick="registerProducer()">Register</button>
         </div>
     </div>
-    <div id="registerFood" class="panel panel-default">
+    <div id="register-food" class="panel panel-default">
         <div class="panel-heading">Register Food</div>
         <div class="panel-body">
             <label for="food-name">Food Name</label>
@@ -45,12 +57,23 @@
             </div>
         </div>
     </div>
-    <div id="producedFood" class="panel panel-default">
+    <div id="produced-food" class="panel panel-default">
         <div class="panel-heading">Food Produced By You</div>
         <div class="panel-body"></div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Is Valid</th>
+                </tr>
+            </thead>
+            <tbody id="produced-food-tbody"></tbody>
+        </table>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+    <script type="text/javascript"src="/js/jquery-3.5.1.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
+    <script src="/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 </body>
 </html>
