edited FoodTracer.sol, main/index.html, images/distributor-img.png  file : distributer -> distributor

--- a/public/main/index.html
+++ b/public/main/index.html
@@ -26,12 +26,12 @@
         </div>
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-                <img src="/images/distributer-img.jpg" alt="image of few trucks on a road">
+                <img src="/images/distributor-img.jpg" alt="image of few trucks on a road">
                 <div class="caption">
-                    <h2>Distributers</h2>
-                    <p>Distributers can promote their fast and safe transportation of crops.</p>
+                    <h2>Distributors</h2>
+                    <p>Distributors can promote their fast and safe transportation of crops.</p>
                     <p>
-                        <a href="/distributer/index.html" class="btn btn-primary" role="button">Go to Distributers' Page</a>
+                        <a href="/distributor/index.html" class="btn btn-primary" role="button">Go to Distributors' Page</a>
                     </p>
                 </div>
             </div>
