--- a/public/consumer/index.html
+++ b/public/consumer/index.html
@@ -3,25 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/consumer/style.css">
+    <script type="text/javascript"src="/js/web3.min.js"></script>
+    <script type="text/javascript"src="/js/truffle-contract.min.js"></script>
+    <script type="text/javascript" src="/consumer/script.js"></script>
     <title>Consumer - Food Tracer</title>
 </head>
 <body>
     <div class="page-header">
+        <ol class="breadcrumb">
+            <li><a href="/main/index.html">Main Page</a></li>
+            <li class="active">Consumers' Page</li>
+        </ol>
         <h1>Food Tracer <small>Consumers' Page</small></h1>
     </div>
-    <div id="unlockAccount" class="panel panel-default">
+    <div id="alert-box"></div>
+    <div id="unlock-account" class="panel panel-default">
         <div class="panel-heading">Unlock Account</div>
         <div class="panel-body">
             <label for="address">Your Address</label>
             <div class="input-group">
                 <input type="text" class="form-control" id="address" size="50">
-                <button class="btn btn-primary margin-horizontal" onclick="unlockAccount()">Unlock</button>
             </div>
+            <label for="password">Your Password</label>
+            <div class="input-group">
+                <input type="password" class="form-control" id="password" size="50">
+            </div>
+            <button class="btn btn-primary margin-vertical" onclick="unlockAccount()">Unlock</button>
         </div>
     </div>
-    <div id="registerConsumer" class="panel panel-default">
+    <div id="register-consumer" class="panel panel-default">
         <div class="panel-heading">Register Consumer</div>
         <div class="panel-body">
             <label for="consumer-name">Name</label>
@@ -35,7 +47,7 @@
             <button class="btn btn-primary margin-vertical" onclick="registerConsumer()">Register</button>
         </div>
     </div>
-    <div id="searchFood" class="panel panel-default">
+    <div id="search-food" class="panel panel-default">
         <div class="panel-heading">Search Food</div>
         <div class="panel-body">
             <label for="food-id-in-search">Food ID</label>
@@ -44,21 +56,44 @@
                 <button class="btn btn-primary margin-horizontal" onclick="searchFood()">Search</button>
             </div>
         </div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Is Valid</th>
+                </tr>
+            </thead>
+            <tbody id="search-food-tbody"></tbody>
+        </table>
     </div>
-    <div id="consumeFood" class="panel panel-default">
+    <div id="consume-food" class="panel panel-default">
         <div class="panel-heading">Consume Food</div>
         <div class="panel-body">
             <label for="food-id-in-consume">Food ID</label>
             <div class="input-group">
                 <input type="text" class="form-control" id="food-id-in-consume" size="30">
-                <button class="btn btn-primary margin-horizontal" onclick="consume()">Consume</button>
-            </div>
-            <div id="foodTrace"> 
+                <button class="btn btn-primary margin-horizontal" onclick="consumeFood()">Consume</button>
             </div>
         </div>
     </div>
+    <div id="consumed-food" class="panel panel-default">
+        <div class="panel-heading">Food Consumed By You</div>
+        <div class="panel-body"></div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Is Valid</th>
+                </tr>
+            </thead>
+            <tbody id="consumed-food-tbody"></tbody>
+        </table>
+    </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+    <script type="text/javascript"src="/js/jquery-3.5.1.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
+    <script src="/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 </body>
 </html>
