--- a/public/consumer/index.html
+++ b/public/consumer/index.html
@@ -19,77 +19,90 @@
         <h1>Food Tracer <small>Consumers' Page</small></h1>
     </div>
     <div id="alert-box"></div>
-    <div id="unlock-account" class="panel panel-default">
-        <div class="panel-heading">Unlock Account</div>
-        <div class="panel-body">
-            <label for="address">Your Address</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="address" size="50">
+    <div id="flex-container">
+        <div id="inner-container">
+            <div id="unlock-account" class="panel panel-default">
+                <div class="panel-heading">Unlock Account</div>
+                <div class="panel-body">
+                    <label for="address">Your Address</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="address" size="50">
+                    </div>
+                    <label for="password">Your Password</label>
+                    <div class="input-group">
+                        <input type="password" class="form-control" id="password" size="50">
+                    </div>
+                    <button class="btn btn-primary margin-vertical" onclick="unlockAccount()">Unlock</button>
+                </div>
             </div>
-            <label for="password">Your Password</label>
-            <div class="input-group">
-                <input type="password" class="form-control" id="password" size="50">
+            <div id="register-consumer" class="panel panel-default">
+                <div class="panel-heading">Register Consumer</div>
+                <div class="panel-body">
+                    <label for="consumer-name">Name</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="consumer-name" size="20">
+                    </div>
+                    <label for="consumer-description">Description</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="consumer-description" size="100">
+                    </div>
+                    <button class="btn btn-primary margin-vertical" onclick="registerConsumer()">Register</button>
+                </div>
             </div>
-            <button class="btn btn-primary margin-vertical" onclick="unlockAccount()">Unlock</button>
+            <div id="search-food" class="panel panel-default">
+                <div class="panel-heading">Search Food</div>
+                <div class="panel-body">
+                    <label for="food-id-in-search">Food ID</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="food-id-in-search" size="30">
+                        <button class="btn btn-primary margin-horizontal" onclick="searchFood()">Search</button>
+                    </div>
+                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Is Valid</th>
+                        </tr>
+                    </thead>
+                    <tbody id="search-food-tbody"></tbody>
+                </table>
+            </div>
+            <div id="consume-food" class="panel panel-default">
+                <div class="panel-heading">Consume Food</div>
+                <div class="panel-body">
+                    <label for="food-id-in-consume">Food ID</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="food-id-in-consume" size="30">
+                        <button class="btn btn-primary margin-horizontal" onclick="consumeFood()">Consume</button>
+                    </div>
+                </div>
+            </div>
+            <div id="consumed-food" class="panel panel-default">
+                <div class="panel-heading">Food Consumed By You</div>
+                <div class="panel-body"></div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Is Valid</th>
+                        </tr>
+                    </thead>
+                    <tbody id="consumed-food-tbody"></tbody>
+                </table>
+            </div>
         </div>
-    </div>
-    <div id="register-consumer" class="panel panel-default">
-        <div class="panel-heading">Register Consumer</div>
-        <div class="panel-body">
-            <label for="consumer-name">Name</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="consumer-name" size="20">
-            </div>
-            <label for="consumer-description">Description</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="consumer-description" size="100">
-            </div>
-            <button class="btn btn-primary margin-vertical" onclick="registerConsumer()">Register</button>
-        </div>
-    </div>
-    <div id="search-food" class="panel panel-default">
-        <div class="panel-heading">Search Food</div>
-        <div class="panel-body">
-            <label for="food-id-in-search">Food ID</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="food-id-in-search" size="30">
-                <button class="btn btn-primary margin-horizontal" onclick="searchFood()">Search</button>
+        <div id="consumer-info" class="panel panel-default">
+            <div class="panel-body">
+                <h2 id="info-name"></h2>
+                <p id="info-description"></p>
+                <div id="info-food" class="panel panel-default">
+                    <p><strong>Consumed Food</strong>&nbsp&nbsp&nbsp&nbsp&nbsp<span id="food-count"></span></p>
+                </div>
             </div>
         </div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Is Valid</th>
-                </tr>
-            </thead>
-            <tbody id="search-food-tbody"></tbody>
-        </table>
-    </div>
-    <div id="consume-food" class="panel panel-default">
-        <div class="panel-heading">Consume Food</div>
-        <div class="panel-body">
-            <label for="food-id-in-consume">Food ID</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="food-id-in-consume" size="30">
-                <button class="btn btn-primary margin-horizontal" onclick="consumeFood()">Consume</button>
-            </div>
-        </div>
-    </div>
-    <div id="consumed-food" class="panel panel-default">
-        <div class="panel-heading">Food Consumed By You</div>
-        <div class="panel-body"></div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Is Valid</th>
-                </tr>
-            </thead>
-            <tbody id="consumed-food-tbody"></tbody>
-        </table>
     </div>
 
     <script type="text/javascript"src="/js/jquery-3.5.1.min.js"></script>
